crawler/kubernetes/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: crawler
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: crawler
        component: crawler
    spec:
      containers:
        - image: vvlineate/crawler:latest
          name: crawler
