crawler/kubernetes/mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: crawler
    component: mongo
    crawler-db: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: crawler
        component: mongo
        crawler-db: "true"
    spec:
      containers:
        - image: mongo:3.2
          name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          emptyDir: {}
