crawler/kubernetes/rabbitmq-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  labels:
    app: crawler
    component: rabbit
    rabbit-mq: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: rabbit
  template:
    metadata:
      name: rabbit
      labels:
        app: crawler
        component: rabbit
        crawler-db: "true"
    spec:
      containers:
        - image: rabbitmq:3.8.5-alpine
          name: rabbit
