crawler/kubernetes/crawler-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-db
  labels:
    app: crawler
    component: mongo
    crawler-db: "true"
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: crawler
    component: mongo
    crawler-db: "true"
