crawler/kubernetes/crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: crawler
    component: crawler
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: crawler
    component: crawler
