crawler/kubernetes/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-srvc
  labels:
    app: crawler
    component: ui
spec:
  type: NodePort
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: crawler
    component: ui
